--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,8 @@ jobs:
 
       - name: Set up Git LFS
         run: |
-          git config --global user.name ${{ secrets.username }}
-          git config --global user.email ${{ secrets.email }}
+          git config --global user.name valiarw
+          git config --global user.email valiarw1300@gmail.com
           git lfs install
           git lfs track "mlruns/**"
           git add .gitattributes
