--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,28 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install mlflow
+          pip install -r requirements.txt
+
+      - name: Set MLflow Tracking Credentials for DagsHub
+        env:
+          MLFLOW_TRACKING_URI: ${{ secrets.DAGSHUB_MLFLOW_URI }} # Use secrets for URIs and credentials
+          MLFLOW_TRACKING_USERNAME: ${{ secrets.DAGSHUB_USERNAME }}
+          MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
+        run: |
+          echo "MLFLOW_TRACKING_URI set to: $env:MLFLOW_TRACKING_URI"
+          # Optional: Add dagshub.init() if your script expects it or if it helps auth
+          # python -c "import dagshub; dagshub.init(repo_owner='valiarw', repo_name='Membangun_Model', mlflow=True)"
+
+      - name: Clean up local mlruns (Crucial for fresh start in CI)
+        run: |
+          if exist mlruns (rmdir /s /q mlruns) # For Windows runners
+          # For Linux/Ubuntu runners:
+          # rm -rf mlruns/
+
+      - name: Run MLflow Training Script
+        # Replace 'modelling.py' with your actual training script name
+        run: |
+          python modelling.py 100 10
 
       - name: Run mlflow project
         run: |
