--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Run mlflow project
         run: |
-          mlflow run MLProject --env-manager=local 
+          mlflow run MLproject --env-manager=local 
 
       # Get latest run_id
       - name: Get latest MLflow run_id
