--- a/mlruns/0/meta.yaml
+++ b/mlruns/0/meta.yaml
@@ -1,3 +1,6 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:c0ec93afa62dbd0c4ad849ad6d5ddd0c686b255118dd4fd20097d9d957420416
-size 157
+artifact_location: mlflow-artifacts:/0
+creation_time: 1751537078623
+experiment_id: '0'
+last_update_time: 1751537078623
+lifecycle_stage: active
+name: Default
