--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
       - main
       
 env:
-  CSV_URL: "heart_preprocessing/train.csv"
+  CSV_URL: "./heart_preprocessing/train.csv"
 
 jobs:
   build:
