--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
  
     steps:
       - name: Checkout repository
@@ -28,21 +28,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install mlflow
-
-      - name: Set MLflow Tracking Credentials for DagsHub
-        env:
-          MLFLOW_TRACKING_URI: ${{ secrets.DAGSHUB_MLFLOW_URI }} # Use secrets for URIs and credentials
-          MLFLOW_TRACKING_USERNAME: ${{ secrets.DAGSHUB_USERNAME }}
-          MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
-        run: |
-          echo "MLFLOW_TRACKING_URI set to: $env:MLFLOW_TRACKING_URI"
-          # Optional: Add dagshub.init() if your script expects it or if it helps auth
-          # python -c "import dagshub; dagshub.init(repo_owner='valiarw', repo_name='Membangun_Model', mlflow=True)"
-
-      - name: Run MLflow Training Script
-        # Replace 'modelling.py' with your actual training script name
-        run: |
-          python modelling.py 100 10
 
       - name: Run mlflow project
         run: |
