--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: USERNAME
-          password: TOKEN_DOCKER
+          password: PASS_DOCKER
 
       # Tag the Docker image
       - name: Tag Docker Image
