--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: USERNAME
+          username: UNAME_DOCKER
           password: TOKENDOCKER
 
       # Tag the Docker image
