--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: UNAME_DOCKER
-          password: TOKENDOCKER
+          password: TOKENDOC
 
       # Tag the Docker image
       - name: Tag Docker Image
